--- a/.github/aws-config.yml
+++ b/.github/aws-config.yml
@@ -40,4 +40,4 @@ sam_template: sam-template.yml
 ################################
 # Default region is: us-west-2
 # if not provided below
-region: eu-stockholm
+region: eu-north-1
